[package]
name = "socketcluster_server"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tpisto/socketcluster_server"
homepage = "https://github.com/tpisto/socketcluster_server"
description = "SocketCluster protocol V1 server library"
keywords = [
    "websocket",
    "socketcluster",
]

[dependencies]
axum = { version = "0.7", features = ["ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
headers = "0.4.0"
tracing = "0.1.25"
async-trait = "0.1.68"
derive_more = { version = "1", features = ["debug"] }

[lib]
doctest = false